<resources>
    
    <string name="app_name">SecondTaskSolution</string>
    <string name="cityNameText">İstanbul</string>
    <string name="todayText">Bugün</string>
    <string name="todayDateText">01 Nisan 2023</string>
    <string name="temperatureText">26</string>
    <string name="degreeMarkText">°</string>
    <string name="weatherNameText">Güneşli</string>
    <string name="windText">Rüzgar</string>
    <string name="windSpeedText">3 km/s</string>
    <string name="updateDataText">Verileri Güncelle</string>
    <string name="nextDayGroupFirstDateText">Sal, 02 Nisan</string>
    <string name="nextDayGroupSecondDateText">Çar, 03 Nisan</string>
    <string name="nextDayGroupThirdDateText">Per, 04 Nisan</string>
    <string name="nextDayGroupFourthDateText">Cum, 05 Nisan</string>
    <string name="nextDayGroupTemperatureRangesText">14° - 27°</string>
    <string name="activityToActivityText">Activity\'den Activity\'e</string>
    <string name="fragmentToFragmentText">Fragment\'dan Fragment\'a</string>
    <string name="navFragmentToNavFragmentText">NavFragment\'dan NavFragment\'a</string>
    
</resources>
