<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface">

    <androidx.cardview.widget.CardView
        android:id="@+id/listRowCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/smallHorizontalSpacing"
        android:layout_marginTop="@dimen/tinyVerticalSpacing"
        android:layout_marginEnd="@dimen/smallHorizontalSpacing"
        android:layout_marginBottom="@dimen/tinyVerticalSpacing"
        android:background="?attr/colorPrimary"
        app:cardCornerRadius="@dimen/mediumRadiusSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/listRowConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary">

            <TextView
                android:id="@+id/listRowTemperatureText"
                style="@style/hugeBoldDarkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mediumHorizontalSpacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/temperatureText" />

            <TextView
                android:id="@+id/listRowDegreeMarkText"
                style="@style/hugeBoldDarkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degreeMarkText"
                app:layout_constraintBottom_toBottomOf="@id/listRowTemperatureText"
                app:layout_constraintStart_toEndOf="@id/listRowTemperatureText"
                app:layout_constraintTop_toTopOf="@id/listRowTemperatureText" />

            <ImageView
                android:id="@+id/listRowWeatherImage"
                android:layout_width="@dimen/largeImageSize"
                android:layout_height="@dimen/largeImageSize"
                android:layout_marginEnd="@dimen/mediumHorizontalSpacing"
                android:src="@drawable/ic_sunny_dark"
                app:layout_constraintBottom_toTopOf="@id/listRowTemperatureRangeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/listRowTemperatureText" />

            <TextView
                android:id="@+id/listRowTemperatureRangeText"
                style="@style/smallBoldDarkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/listRowTemperatureText"
                app:layout_constraintTop_toBottomOf="@id/listRowTemperatureText"
                tools:text="@string/nextDayGroupTemperatureRangesText" />

            <TextView
                android:id="@+id/listRowCityText"
                style="@style/smallBoldDarkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallVerticalSpacing"
                android:layout_marginBottom="@dimen/mediumVerticalSpacing"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/listRowTemperatureRangeText"
                app:layout_constraintTop_toBottomOf="@id/listRowTemperatureRangeText"
                tools:text="@string/cityNameText" />

            <TextView
                android:id="@+id/listRowWeatherText"
                style="@style/smallRegularDarkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/listRowCityText"
                app:layout_constraintEnd_toEndOf="@id/listRowWeatherImage"
                app:layout_constraintTop_toTopOf="@id/listRowCityText"
                tools:text="@string/weatherNameText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>