<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <ImageView
        android:id="@+id/detailFragmentRefreshImage"
        style="@style/mediumImage"
        android:layout_marginTop="@dimen/mediumVerticalSpacing"
        android:src="@drawable/ic_refresh_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailFragmentCityText"
        style="@style/largeMediumLightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/smallHorizontalSpacing"
        android:layout_marginTop="@dimen/mediumVerticalSpacing"
        android:layout_marginEnd="@dimen/smallHorizontalSpacing"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailFragmentRefreshImage"
        tools:text="@string/cityNameText" />

    <TextView
        android:id="@+id/detailFragmentTodayText"
        style="@style/smallRegularLightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailFragmentCityText" />

    <ImageView
        android:id="@+id/detailFragmentWeatherImage"
        style="@style/largeImage"
        android:layout_marginTop="@dimen/hugeVerticalSpacing"
        android:src="@drawable/ic_sunny_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailFragmentTodayText" />

    <TextView
        android:id="@+id/detailFragmentTemperatureText"
        style="@style/hugeBoldLightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hugeVerticalSpacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailFragmentWeatherImage"
        tools:text="@string/temperatureText" />

    <TextView
        android:id="@+id/detailFragmentDegreeMarkText"
        style="@style/hugeBoldLightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degreeMarkText"
        app:layout_constraintBottom_toBottomOf="@id/detailFragmentTemperatureText"
        app:layout_constraintStart_toEndOf="@id/detailFragmentTemperatureText"
        app:layout_constraintTop_toTopOf="@id/detailFragmentTemperatureText" />

    <TextView
        android:id="@+id/detailFragmentWeatherText"
        style="@style/normalMediumLightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mediumVerticalSpacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailFragmentTemperatureText"
        tools:text="@string/weatherNameText" />

    <TextView
        android:id="@+id/detailFragmentWindText"
        style="@style/smallMediumLightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hugeVerticalSpacing"
        android:text="@string/windText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailFragmentWeatherText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailFragmentWeatherConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tinyVerticalSpacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailFragmentWindText">

        <ImageView
            android:id="@+id/detailFragmentWindImage"
            style="@style/smallImage"
            android:src="@drawable/ic_wind_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailsActivityWindSpeedText"
            style="@style/smallRegularLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tinyHorizontalSpacing"
            android:layout_toEndOf="@id/detailFragmentWindImage"
            android:text="@string/windSpeedText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detailFragmentWindImage"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailFragmentNextDayGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/largeHorizontalSpacing"
        android:layout_marginEnd="@dimen/largeHorizontalSpacing"
        android:layout_marginBottom="@dimen/hugeVerticalSpacing"
        app:layout_constraintBottom_toTopOf="@id/detailFragmentUpdateDataButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/detailFragmentNextFirstDayDateText"
            style="@style/smallRegularLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupFirstDateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detailFragmentNextFirstDayWeatherImage"
            style="@style/mediumImage"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:src="@drawable/ic_sunny_light"
            app:layout_constraintEnd_toStartOf="@id/detailFragmentNextFirstDayCelciusText"
            app:layout_constraintStart_toEndOf="@id/detailFragmentNextFirstDayDateText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailFragmentNextFirstDayCelciusText"
            style="@style/smallMediumLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailFragmentNextSecondDayDateText"
            style="@style/smallRegularLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:layout_marginBottom="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupSecondDateText"
            app:layout_constraintBottom_toTopOf="@id/detailFragmentNextThirdDayDateText"
            app:layout_constraintEnd_toStartOf="@+id/detailFragmentNextSecondDayWeatherImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailFragmentNextFirstDayDateText" />

        <ImageView
            android:id="@+id/detailFragmentNextSecondDayWeatherImage"
            style="@style/mediumImage"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:src="@drawable/ic_cloudy_light"
            app:layout_constraintEnd_toEndOf="@id/detailFragmentNextFirstDayWeatherImage"
            app:layout_constraintStart_toStartOf="@id/detailFragmentNextFirstDayWeatherImage"
            app:layout_constraintTop_toBottomOf="@id/detailFragmentNextFirstDayWeatherImage" />

        <TextView
            android:id="@+id/detailFragmentNextSecondDayCelciusText"
            style="@style/smallMediumLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailFragmentNextFirstDayCelciusText" />

        <TextView
            android:id="@+id/detailFragmentNextThirdDayDateText"
            style="@style/smallRegularLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupThirdDateText"
            app:layout_constraintEnd_toStartOf="@+id/detailFragmentNextThirdDayWeatherImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailFragmentNextSecondDayDateText" />

        <ImageView
            android:id="@+id/detailFragmentNextThirdDayWeatherImage"
            style="@style/mediumImage"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:src="@drawable/ic_sunny_light"
            app:layout_constraintEnd_toEndOf="@id/detailFragmentNextSecondDayWeatherImage"
            app:layout_constraintStart_toStartOf="@id/detailFragmentNextSecondDayWeatherImage"
            app:layout_constraintTop_toBottomOf="@id/detailFragmentNextSecondDayWeatherImage" />

        <TextView
            android:id="@+id/detailFragmentNextThirdDayCelciusText"
            style="@style/smallMediumLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailFragmentNextSecondDayCelciusText" />

        <TextView
            android:id="@+id/detailFragmentNextFourthDayDateText"
            style="@style/smallRegularLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:layout_marginBottom="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupFourthDateText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/detailFragmentNextFourthDayWeatherImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailFragmentNextThirdDayDateText" />

        <ImageView
            android:id="@+id/detailFragmentNextFourthDayWeatherImage"
            style="@style/mediumImage"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:layout_marginBottom="@dimen/smallVerticalSpacing"
            android:src="@drawable/ic_rainy_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/detailFragmentNextThirdDayWeatherImage"
            app:layout_constraintStart_toStartOf="@id/detailFragmentNextThirdDayWeatherImage"
            app:layout_constraintTop_toBottomOf="@id/detailFragmentNextThirdDayWeatherImage" />

        <TextView
            android:id="@+id/detailFragmentNextFourthDayCelciusText"
            style="@style/smallMediumLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:layout_marginBottom="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailFragmentNextThirdDayCelciusText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/detailFragmentUpdateDataButton"
        style="@style/normalMediumLightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/largeHorizontalSpacing"
        android:layout_marginEnd="@dimen/largeHorizontalSpacing"
        android:layout_marginBottom="@dimen/hugeVerticalSpacing"
        android:background="@drawable/rectangle_white_button_background"
        android:text="@string/updateDataText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
