<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".view.episode1.DetailActivity">

    <ImageView
        android:id="@+id/detailActivityRefreshImage"
        style="@style/mediumImage"
        android:layout_marginTop="@dimen/mediumVerticalSpacing"
        android:src="@drawable/ic_refresh_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailActivityCityText"
        style="@style/largeMediumLightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/smallHorizontalSpacing"
        android:layout_marginTop="@dimen/mediumVerticalSpacing"
        android:layout_marginEnd="@dimen/smallHorizontalSpacing"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailActivityRefreshImage"
        tools:text="@string/cityNameText" />

    <TextView
        android:id="@+id/detailActivityTodayText"
        style="@style/smallRegularLightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailActivityCityText" />

    <ImageView
        android:id="@+id/detailActivityWeatherImage"
        style="@style/largeImage"
        android:layout_marginTop="@dimen/largeVerticalSpacing"
        android:src="@drawable/ic_sunny_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailActivityTodayText" />

    <TextView
        android:id="@+id/detailActivityTemperatureText"
        style="@style/hugeBoldLightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extraLargeVerticalSpacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailActivityWeatherImage"
        tools:text="@string/temperatureText" />

    <TextView
        android:id="@+id/detailActivityDegreeMarkText"
        style="@style/hugeBoldLightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degreeMarkText"
        app:layout_constraintBottom_toBottomOf="@id/detailActivityTemperatureText"
        app:layout_constraintStart_toEndOf="@id/detailActivityTemperatureText"
        app:layout_constraintTop_toTopOf="@id/detailActivityTemperatureText" />

    <TextView
        android:id="@+id/detailActivityWeatherText"
        style="@style/normalMediumLightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mediumVerticalSpacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailActivityTemperatureText"
        tools:text="@string/weatherNameText" />

    <TextView
        android:id="@+id/detailActivityWindText"
        style="@style/smallMediumLightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extraLargeVerticalSpacing"
        android:text="@string/windText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailActivityWeatherText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailActivityWeatherConstraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tinyVerticalSpacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailActivityWindText">

        <ImageView
            android:id="@+id/detailActivityWindImage"
            style="@style/smallImage"
            android:src="@drawable/ic_wind_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailsActivityWindSpeedText"
            style="@style/smallRegularLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tinyHorizontalSpacing"
            android:layout_toEndOf="@id/detailActivityWindImage"
            android:text="@string/windSpeedText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detailActivityWindImage"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailActivityNextDayGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/largeHorizontalSpacing"
        android:layout_marginEnd="@dimen/largeHorizontalSpacing"
        android:layout_marginBottom="@dimen/extraLargeVerticalSpacing"
        app:layout_constraintBottom_toTopOf="@id/detailActivityUpdateDataButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/detailActivityNextFirstDayDateText"
            style="@style/smallRegularLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupFirstDateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/detailActivityNextFirstDayWeatherImage"
            style="@style/mediumImage"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:src="@drawable/ic_sunny_light"
            app:layout_constraintEnd_toStartOf="@id/detailActivityNextFirstDayCelciusText"
            app:layout_constraintStart_toEndOf="@id/detailActivityNextFirstDayDateText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailActivityNextFirstDayCelciusText"
            style="@style/smallMediumLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailActivityNextSecondDayDateText"
            style="@style/smallRegularLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:layout_marginBottom="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupSecondDateText"
            app:layout_constraintBottom_toTopOf="@id/detailActivityNextThirdDayDateText"
            app:layout_constraintEnd_toStartOf="@+id/detailActivityNextSecondDayWeatherImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailActivityNextFirstDayDateText" />

        <ImageView
            android:id="@+id/detailActivityNextSecondDayWeatherImage"
            style="@style/mediumImage"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:src="@drawable/ic_cloudy_light"
            app:layout_constraintEnd_toEndOf="@id/detailActivityNextFirstDayWeatherImage"
            app:layout_constraintStart_toStartOf="@id/detailActivityNextFirstDayWeatherImage"
            app:layout_constraintTop_toBottomOf="@id/detailActivityNextFirstDayWeatherImage" />

        <TextView
            android:id="@+id/detailActivityNextSecondDayCelciusText"
            style="@style/smallMediumLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailActivityNextFirstDayCelciusText" />

        <TextView
            android:id="@+id/detailActivityNextThirdDayDateText"
            style="@style/smallRegularLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupThirdDateText"
            app:layout_constraintEnd_toStartOf="@+id/detailActivityNextThirdDayWeatherImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailActivityNextSecondDayDateText" />

        <ImageView
            android:id="@+id/detailActivityNextThirdDayWeatherImage"
            style="@style/mediumImage"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:src="@drawable/ic_sunny_light"
            app:layout_constraintEnd_toEndOf="@id/detailActivityNextSecondDayWeatherImage"
            app:layout_constraintStart_toStartOf="@id/detailActivityNextSecondDayWeatherImage"
            app:layout_constraintTop_toBottomOf="@id/detailActivityNextSecondDayWeatherImage" />

        <TextView
            android:id="@+id/detailActivityNextThirdDayCelciusText"
            style="@style/smallMediumLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailActivityNextSecondDayCelciusText" />

        <TextView
            android:id="@+id/detailActivityNextFourthDayDateText"
            style="@style/smallRegularLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:layout_marginBottom="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupFourthDateText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/detailActivityNextFourthDayWeatherImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailActivityNextThirdDayDateText" />

        <ImageView
            android:id="@+id/detailActivityNextFourthDayWeatherImage"
            style="@style/mediumImage"
            android:layout_marginTop="@dimen/smallVerticalSpacing"
            android:layout_marginBottom="@dimen/smallVerticalSpacing"
            android:src="@drawable/ic_rainy_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/detailActivityNextThirdDayWeatherImage"
            app:layout_constraintStart_toStartOf="@id/detailActivityNextThirdDayWeatherImage"
            app:layout_constraintTop_toBottomOf="@id/detailActivityNextThirdDayWeatherImage" />

        <TextView
            android:id="@+id/detailActivityNextFourthDayCelciusText"
            style="@style/smallMediumLightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mediumVerticalSpacing"
            android:layout_marginBottom="@dimen/mediumVerticalSpacing"
            android:text="@string/nextDayGroupTemperatureRangesText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailActivityNextThirdDayCelciusText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/detailActivityUpdateDataButton"
        style="@style/normalMediumLightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/largeHorizontalSpacing"
        android:layout_marginEnd="@dimen/largeHorizontalSpacing"
        android:layout_marginBottom="@dimen/extraLargeVerticalSpacing"
        android:background="@drawable/rectangle_white_button_background"
        android:text="@string/updateDataText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>